--- a/style.css
+++ b/style.css
@@ -1,15 +1,128 @@
-.hide{
-  display: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-*{
-  background-color: black;
-  color: white;
+body {
+    background-color: black;
+    color: white;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.flex-util{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 270px;
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+.gallery-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 40px;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery-wrapper {
+    width: 100%;
+    overflow: hidden;
+}
+
+.gallery-slider {
+    display: flex;
+}
+
+.slide {
+    flex: 0 0 33.333%;
+    padding: 10px;
+}
+
+@media (max-width: 768px) {
+    .slide {
+        flex: 0 0 100%;
+    }
+}
+
+.image-container {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.arrow {
+    background-color: white;
+    color: black;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.0rem;
+}
+
+.arrow:disabled {
+    background-color: red;
+}
+
+.pager {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.pager-dots {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ccc;
+}
+
+.dot.active {
+    background-color: green;
+}
+
+.pager-info {
+    color: white;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .navigation {
+        gap: 10px;
+    }
+    
+    .arrow {
+        width: 30px;
+        height: 30px;
+        font-size: 0.7rem;
+    }
+    
 }
